--- a/stellar.xcodeproj/xcshareddata/xcschemes/StellarTests.xcscheme
+++ b/stellar.xcodeproj/xcshareddata/xcschemes/StellarTests.xcscheme
@@ -10,7 +10,18 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "C2B7E5A9255AA27500DBB611"
+            BuildableName = "Stellar.app"
+            BlueprintName = "Stellar"
+            ReferencedContainer = "container:Stellar.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO">
